--- a/client/bower.json
+++ b/client/bower.json
@@ -2,8 +2,8 @@
   "name": "client",
   "version": "0.0.0",
   "dependencies": {
-    "jquery": "~1.10.2",
-    "bootstrap.css": "~2.3.2"
+    "jquery": ">=1.10.2",
+    "bootstrap.css": ">=2.3.2"
   },
   "devDependencies": {}
 }
