--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "socket.io": ">=0.9.16",
     "express": ">=3.4.0",
-    "forever": ">=0.10.8"
+    "forever": ">=0.10.8",
+    "mongoose": ">=3.5.7"
   }
 }
